--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,36 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/demoJwtAjax
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.id.new_generator_mappings = true
-spring.jpa.properties.hibernate.show.sql = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.hb2dll.auto = update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-
-
-
-#CAU HINH DEPLOY HEROKU#
-
-#spring.jpa.hibernate.ddl-auto=update
-#spring.profiles.active=production
-#spring.thymeleaf.mode=HTML
-#logging.level.org.springframework=INFO
-#server.port=${PORT:5000}
-#spring.datasource.url=jdbc:mysql://be7773a853aaf7:fda5194b@eu-cdbr-west-01.cleardb.com/heroku_45e460775d28b8d?reconnect=true&characterEncoding=UTF-8
-#spring.datasource.username=be7773a853aaf7
-#spring.datasource.password=fda5194b
+#spring.datasource.url=jdbc:mysql://localhost:3306/demoJwtAjax
+#spring.datasource.username=root
+#spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.hikari.connection-timeout=30000
-#spring.datasource.hikari.maximum-pool-size=10
-#spring.jpa.open-in-view=false
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#debug=true
-#spring.jpa.properties.hibernate.diale= org.hibernate.dialect.MySQL5Dialect
+##Hibernate
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.id.new_generator_mappings = true
+#spring.jpa.properties.hibernate.show.sql = true
+#spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.hb2dll.auto = update
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+
+
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=production
+spring.thymeleaf.mode=HTML
+logging.level.org.springframework=INFO
+server.port=${PORT:5000}
+spring.datasource.url=jdbc:mysql://b640f41e653dcf:c7a5ddcf@eu-cdbr-west-02.cleardb.net/heroku_9d8ba0d7f1d0872?reconnect=true
+spring.datasource.username=b640f41e653dcf
+spring.datasource.password=c7a5ddcf
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+debug=true
+spring.jpa.properties.hibernate.diale= org.hibernate.dialect.MySQL5Dialect
 
